# create-enclave

./: .gitignore  README.md  TODO  package.json
server/golang/: go.mod  go.sum  server.go  utils.go
server/node/: server.ts  utils.ts
server/python/: pyproject.toml  server.py  utils.py
src/: create-enclave.ts  package.ts
