[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "aiohttp-session>=2.12.1",
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "redis>=7.1.0",
    "scailo-sdk>=0.2.9",
]
